tests/fixtures/hub-module/example/1/good/src/callerThree.ts
import { readMid } from "./reading.js"
import { writeTail } from "./writing.js"

export const three = (): string => readMid() + writeTail()
