tests/fixtures/hub-module/example/1/bad/src/gamma.ts
export const gammaValue = "gamma"

export const readGamma = (): string => gammaValue
